force/src/objects/User_Flow_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>Flow_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Flow Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flow_Path__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Flow Path</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Flow_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Flow Tracking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>User__c</columns>
        <columns>Flow_Name__c</columns>
        <columns>Flow_Path__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OBJECT_ID</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_User_Flow_Tracking_Records</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Flow_Name__c</columns>
        <columns>Flow_Path__c</columns>
        <columns>User__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User__c</field>
            <operation>equals</operation>
        </filters>
        <label>All User Flow Tracking Records</label>
    </listViews>
    <nameField>
        <displayFormat>FT-{000000}</displayFormat>
        <label>User Flow Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Flow Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>